[package]
name = "epher"
version = "0.1.0"
authors = ["Naotiki <naotiki@naotiki.me>"]
edition = "2021"
[features]
default = []
utils = ["dep:walkdir"]

# https://github.com/johnthagen/min-sized-rust
[profile.release]
codegen-units = 1
panic = "abort"
lto = true
opt-level = "s"  # Optimize for size.
strip = true  # Automatically strip symbols from the binary.

[[bin]]
name = "epher"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.9", features = ["derive"]}
toml = { version = "0.8.15",features = ["parse"]}
serde = { version = "1.0.204", features = ["derive"] }
toml_edit = "0.22.16"
dirs = "5.0.1"
inquire = "0.7.5"
once_cell = "1.19.0"
walkdir = { version = "2.5.0", optional = true }
ansi_term = "0.12.1"
regex = "1.10.5"
indicatif = "0.17.8"
dialoguer = {version = "0.11.0",features = ["fuzzy-select"]}

